# ATLYS-blockchain-protocol

./: .gitignore  CONTRIBUTING.md  PROJECT.md  README.md  atlas_protocol.py  atlys_core.py  atlys_crosschain.py  atlys_sign.py  atlys_smartcontract.py  example_usage.py  pyproject.toml  requirements.txt  test_atlys.py
.github/: CODEOWNERS
docs/: README.md
examples/: example_code.py  sample_blockchain.py
src/atlys/core/: atlys_implementation.py
src/atlys/crypto/: atlys_wallet.py
src/atlys/networking/: atlys_networking.py
whitepaper/: atlys_whitepaper.md
