[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlys"
version = "0.1.0"
description = "A universal cross-chain protocol for blockchain interoperability"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["blockchain", "cryptocurrency", "cross-chain", "defi"]
authors = [
    { name = "Atlys Team", email = "team@atlys.io" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "web3>=6.0.0",
    "aiohttp>=3.8.0",
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=atlys"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Describe"]
python_functions = ["test_*", "it_*", "they_*"]

[project.urls]
"Homepage" = "https://atlys.io"
"Bug Tracker" = "https://github.com/atlys/atlys/issues"
"Documentation" = "https://docs.atlys.io"
"Source Code" = "https://github.com/atlys/atlys"
